# magpie

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DISTRIBUTION.md  INSTALL.md  PLAN.md  QUICKSTART.md  README.md  config.example.toml  e2e-probe-m3.js  e2e-probe.js  package-lock.json  package.json  reviewer-prompt.md
.chalk/: task_list.md
.chalk/tasks/: bug_df2d.md  decision_06c2.md  decision_7e12.md  decision_aa2d.md  epic_0162.md  epic_04f9.md  epic_1a01.md  epic_3c41.md  epic_59b1.md  epic_6730.md  epic_6955.md  epic_a580.md  epic_d6c1.md  epic_e6e6.md  task_00d0.md  task_037b.md  task_0716.md  task_08ec.md  task_0d97.md  task_0daf.md  task_0f51.md  task_1a10.md  task_1a11.md  task_1a12.md  task_1a13.md  task_1a14.md  task_1a15.md  task_1a16.md  task_1a17.md  task_1a18.md  task_1a19.md  task_1a1a.md  task_1a1b.md  task_1fdc.md  task_1ffd.md  task_220f.md  task_292c.md  task_2941.md  task_2a18.md  task_2d6c.md  (+55 more)
.claude/: settings.json
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  release-host.yml  release-reviewer.yml  rust.yml
cloudflared/: config.example.yml
docker/reviewer/: Dockerfile  README.md  entrypoint.sh  extension-package.json  forwarder.mjs
docs/: cloudflared.md  e2e-smoke.md  ingress.md  smee.md
docs/design/: cto-decision-brief.md  m6e-rootless-podman-shelved.md  rust-adoption.md  sandboxed-reviewer-design.md  shim-containerisation.md  single-container-systemd.md
rust/: Cargo.toml  rust-toolchain.toml
rust/vsock-client/: Cargo.toml
rust/vsock-client/src/: main.rs
rust/vsock-framing/: Cargo.toml
rust/vsock-framing/src/: lib.rs
scripts/: build-reviewer-image.sh  dev-smee.mjs  install.sh  pack-host.sh  setup-cloudflared.sh  setup-network.sh  test-zero-egress.sh
smoke/: m5c-check.ts
systemd/: cloudflared.service  magpie-firewall.service  magpie-gateway.service  magpie.service
(+82 files in other folders)
